libs/toolkit-macros-tests/tests/ui/fail/duplicate_name.stderr
error: duplicate `name` parameter
 --> tests/ui/fail/duplicate_name.rs:3:18
  |
3 | #[gear(name="a", name="b", capabilities=[stateful])]
  |                  ^^^^
